--- a/css/site.css
+++ b/css/site.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url("images/2.jpg");
+    background-image: url("../images/2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     height: 100vh;
